# flint

./: .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: dockerize.yml
src/flint/: configure.py  constants.py  helpers.py  main.py  manage.py  prompt.py  state.py
src/flint/db/: models.py
src/flint/db/management/commands/: make_vector_embeddings.py  notify_users.py
src/flint/db/migrations/: 0002_initial.py  0003_alter_conversation_user.py  0004_conversationvector.py  0005_alter_conversationvector_vector.py  0006_conversationvector_vector_index.py  0007_delete_conversationvector.py
src/flint/embeddings/: manager.py
src/flint/routers/: api.py  dev.py  helpers.py
src/velarium/: configure.py  main.py  manage.py  state.py
src/velarium/db/: models.py
src/velarium/db/migrations/: 0001_initial.py  0002_initial.py
src/velarium/routers/: api.py
tests/: test_embeddings_manager.py
